# UFO-DSAP3

./: README.md  package-lock.json  package.json
backend/: CMakeLists.txt
backend/src/: UFO_Sightings.cpp  UFO_Sightings.h  main.cpp
c++ files/: CMakeLists.txt
c++ files/src/: UFO_Sightings.cpp  UFO_Sightings.h  main.cpp
frontend/: index.html  tailwind.config.js
frontend/src/: App.jsx
frontend/src/pages/: Top10Locations.jsx  bestTimes.jsx  bestTimesAndLocations.jsx  landingPage.jsx  predictionsPage.jsx
src/: App.jsx
src/pages/: landingPage.jsx  predictionsPage.jsx
